parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CIRCUMF
    DBLQUO
    RCURL
    LCURL
    DBLSLASH
    SINGQUO

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> declaration_statement
Rule 5     statement -> synonym_statement
Rule 6     statement -> newmode_statement
Rule 7     statement -> procedure_statement
Rule 8     statement -> action_statement
Rule 9     declaration_statement -> DCL declaration_list SEMICOL
Rule 10    synonym_statement -> SYN synonym_list SEMICOL
Rule 11    newmode_statement -> TYPE newmode_list SEMICOL
Rule 12    procedure_statement -> label_id COLON procedure_definition SEMICOL
Rule 13    action_statement -> label_id COLON action SEMICOL
Rule 14    action_statement -> action SEMICOL
Rule 15    declaration_list -> declaration_list COMMA declaration
Rule 16    declaration_list -> declaration
Rule 17    declaration -> identifier_list mode initialization
Rule 18    declaration -> identifier_list mode
Rule 19    initialization -> ASSIGN expression
Rule 20    synonym_list -> synonym_list COMMA synonym_definition
Rule 21    synonym_list -> synonym_definition
Rule 22    synonym_definition -> identifier_list mode ASSIGN constant_expression
Rule 23    synonym_definition -> identifier_list ASSIGN constant_expression
Rule 24    constant_expression -> expression
Rule 25    newmode_list -> newmode_list COMMA mode_definition
Rule 26    newmode_list -> mode_definition
Rule 27    mode_definition -> identifier_list ASSIGN mode
Rule 28    mode -> mode_name
Rule 29    mode -> discrete_mode
Rule 30    mode -> reference_mode
Rule 31    mode -> composite_mode
Rule 32    discrete_mode -> integer_mode
Rule 33    discrete_mode -> boolean_mode
Rule 34    discrete_mode -> character_mode
Rule 35    discrete_mode -> discrete_range_mode
Rule 36    integer_mode -> INT
Rule 37    boolean_mode -> BOOL
Rule 38    character_mode -> CHAR
Rule 39    discrete_range_mode -> discrete_mode_name LPAREN literal_range RPAREN
Rule 40    discrete_range_mode -> discrete_mode LPAREN literal_range RPAREN
Rule 41    mode_name -> identifier
Rule 42    discrete_mode_name -> identifier
Rule 43    literal_range -> lower_bound COLON upper_bound
Rule 44    lower_bound -> expression
Rule 45    upper_bound -> expression
Rule 46    reference_mode -> REF mode
Rule 47    composite_mode -> string_mode
Rule 48    composite_mode -> array_mode
Rule 49    string_mode -> CHARS LBRACK string_length RBRACK
Rule 50    string_length -> integer_literal
Rule 51    array_mode -> ARRAY LBRACK index_mode_list RBRACK element_mode
Rule 52    index_mode_list -> index_mode_list COMMA index_mode
Rule 53    index_mode_list -> index_mode
Rule 54    index_mode -> discrete_mode
Rule 55    index_mode -> literal_range
Rule 56    element_mode -> mode
Rule 57    identifier_list -> identifier
Rule 58    identifier_list -> identifier_list COMMA identifier
Rule 59    identifier -> ID
Rule 60    location -> location_name
Rule 61    location -> dereferenced_reference
Rule 62    location -> string_element
Rule 63    location -> string_slice
Rule 64    location -> array_element
Rule 65    location -> array_slice
Rule 66    location -> call_action
Rule 67    location_name -> identifier
Rule 68    dereferenced_reference -> location ARROW
Rule 69    string_element -> string_location LBRACK start_element RBRACK
Rule 70    start_element -> integer_expression
Rule 71    string_slice -> string_location LBRACK left_element COLON right_element RBRACK
Rule 72    string_location -> location
Rule 73    left_element -> integer_expression
Rule 74    right_element -> integer_expression
Rule 75    array_element -> array_location LBRACK expression_list RBRACK
Rule 76    array_slice -> array_location LBRACK lower_bound COLON upper_bound RBRACK
Rule 77    array_location -> location
Rule 78    primitive_value -> literal
Rule 79    primitive_value -> value_array_element
Rule 80    primitive_value -> value_array_slice
Rule 81    primitive_value -> parenthesized_expression
Rule 82    literal -> integer_literal
Rule 83    literal -> boolean_literal
Rule 84    literal -> character_literal
Rule 85    literal -> empty_literal
Rule 86    literal -> character_string_literal
Rule 87    integer_literal -> ICONST
Rule 88    boolean_literal -> FALSE
Rule 89    boolean_literal -> TRUE
Rule 90    character_literal -> CCONST
Rule 91    empty_literal -> NULL
Rule 92    character_string_literal -> SCONST
Rule 93    value_array_element -> array_primitive_value LBRACK expression_list RBRACK
Rule 94    value_array_slice -> array_primitive_value LBRACK lower_bound COLON upper_bound RBRACK
Rule 95    array_primitive_value -> primitive_value
Rule 96    parenthesized_expression -> LPAREN expression RPAREN
Rule 97    expression_list -> expression_list COMMA expression
Rule 98    expression_list -> expression
Rule 99    expression -> operand0
Rule 100   expression -> conditional_expression
Rule 101   conditional_expression -> IF boolean_expression then_expression else_expression FI
Rule 102   conditional_expression -> IF boolean_expression then_expression elsif_expression else_expression FI
Rule 103   integer_expression -> expression
Rule 104   boolean_expression -> expression
Rule 105   then_expression -> THEN expression
Rule 106   else_expression -> ELSE expression
Rule 107   elsif_expression -> elsif_expression ELSIF boolean_expression then_expression
Rule 108   elsif_expression -> ELSIF boolean_expression then_expression
Rule 109   operand0 -> operand1
Rule 110   operand0 -> operand0 operator1 operand1
Rule 111   operator1 -> relational_operator
Rule 112   operator1 -> membership_operator
Rule 113   relational_operator -> AND
Rule 114   relational_operator -> OR
Rule 115   relational_operator -> EQUALS
Rule 116   relational_operator -> DIF
Rule 117   relational_operator -> GTR
Rule 118   relational_operator -> GEQ
Rule 119   relational_operator -> LSS
Rule 120   relational_operator -> LEQ
Rule 121   membership_operator -> IN
Rule 122   operand1 -> operand2
Rule 123   operand1 -> operand1 operator2 operand2
Rule 124   operator2 -> arithmetic_additive_operator
Rule 125   operator2 -> string_concatenation_operator
Rule 126   arithmetic_additive_operator -> PLUS
Rule 127   arithmetic_additive_operator -> MINUS
Rule 128   string_concatenation_operator -> CONCAT
Rule 129   operand2 -> operand3
Rule 130   operand2 -> operand2 arithmetic_multiplicative_operator operand3
Rule 131   arithmetic_multiplicative_operator -> TIMES
Rule 132   arithmetic_multiplicative_operator -> DIVIDE
Rule 133   arithmetic_multiplicative_operator -> PERC
Rule 134   operand3 -> monadic_operator operand4
Rule 135   operand3 -> operand4
Rule 136   operand3 -> integer_literal
Rule 137   monadic_operator -> MINUS
Rule 138   monadic_operator -> NOT
Rule 139   operand4 -> location
Rule 140   operand4 -> referenced_location
Rule 141   operand4 -> primitive_value
Rule 142   referenced_location -> ARROW location
Rule 143   action_statement_list -> action_statement_list action_statement
Rule 144   action_statement_list -> action_statement
Rule 145   label_id -> identifier
Rule 146   action -> bracketed_action
Rule 147   action -> assignment_action
Rule 148   action -> call_action
Rule 149   action -> exit_action
Rule 150   action -> return_action
Rule 151   action -> result_action
Rule 152   bracketed_action -> if_action
Rule 153   bracketed_action -> do_action
Rule 154   assignment_action -> location assigning_operator expression
Rule 155   assigning_operator -> ASSIGN
Rule 156   assigning_operator -> PLUSASSIGN
Rule 157   assigning_operator -> MINUSASSIGN
Rule 158   assigning_operator -> TIMESASSIGN
Rule 159   assigning_operator -> DIVIDEASSIGN
Rule 160   assigning_operator -> PERCASSIGN
Rule 161   assigning_operator -> CONCATASSIGN
Rule 162   if_action -> IF boolean_expression then_clause else_clause FI
Rule 163   if_action -> IF boolean_expression then_clause FI
Rule 164   then_clause -> THEN action_statement_list
Rule 165   then_clause -> THEN empty
Rule 166   else_clause -> ELSE action_statement_list
Rule 167   else_clause -> ELSE empty
Rule 168   else_clause -> ELSIF boolean_expression then_clause else_clause
Rule 169   else_clause -> ELSIF boolean_expression then_clause
Rule 170   do_action -> DO control_part SEMICOL action_statement_list OD
Rule 171   do_action -> DO control_part SEMICOL OD
Rule 172   do_action -> DO action_statement_list OD
Rule 173   do_action -> DO OD
Rule 174   control_part -> for_control while_control
Rule 175   control_part -> while_control
Rule 176   control_part -> for_control
Rule 177   for_control -> FOR iteration
Rule 178   iteration -> range_enumeration
Rule 179   iteration -> step_enumeration
Rule 180   step_enumeration -> loop_counter ASSIGN start_value step_value DOWN end_value
Rule 181   step_enumeration -> loop_counter ASSIGN start_value step_value end_value
Rule 182   step_enumeration -> loop_counter ASSIGN start_value DOWN end_value
Rule 183   step_enumeration -> loop_counter ASSIGN start_value end_value
Rule 184   loop_counter -> identifier
Rule 185   start_value -> discrete_expression
Rule 186   step_value -> BY integer_expression
Rule 187   end_value -> TO discrete_expression
Rule 188   discrete_expression -> expression
Rule 189   range_enumeration -> loop_counter DOWN IN discrete_mode_name
Rule 190   range_enumeration -> loop_counter IN discrete_mode_name
Rule 191   while_control -> WHILE boolean_expression
Rule 192   call_action -> procedure_call
Rule 193   call_action -> builtin_call
Rule 194   procedure_call -> procedure_name LPAREN parameter_list RPAREN
Rule 195   procedure_call -> procedure_name LPAREN RPAREN
Rule 196   parameter_list -> parameter_list COMMA parameter
Rule 197   parameter_list -> parameter
Rule 198   parameter -> expression
Rule 199   procedure_name -> identifier
Rule 200   exit_action -> EXIT label_id
Rule 201   return_action -> RETURN result
Rule 202   return_action -> RETURN
Rule 203   result_action -> RESULT result
Rule 204   result -> expression
Rule 205   builtin_call -> builtin_name LPAREN parameter_list RPAREN
Rule 206   builtin_call -> builtin_name LPAREN RPAREN
Rule 207   builtin_name -> NUM
Rule 208   builtin_name -> PRED
Rule 209   builtin_name -> SUCC
Rule 210   builtin_name -> UPPER
Rule 211   builtin_name -> LOWER
Rule 212   builtin_name -> LENGTH
Rule 213   builtin_name -> READ
Rule 214   builtin_name -> PRINT
Rule 215   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMICOL statement_list END
Rule 216   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMICOL END
Rule 217   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMICOL statement_list END
Rule 218   procedure_definition -> PROC LPAREN RPAREN result_spec SEMICOL statement_list END
Rule 219   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMICOL END
Rule 220   procedure_definition -> PROC LPAREN RPAREN result_spec SEMICOL END
Rule 221   procedure_definition -> PROC LPAREN RPAREN SEMICOL statement_list END
Rule 222   procedure_definition -> PROC LPAREN RPAREN SEMICOL END
Rule 223   formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 224   formal_parameter_list -> formal_parameter
Rule 225   formal_parameter -> identifier_list parameter_spec
Rule 226   parameter_spec -> mode parameter_attribute
Rule 227   parameter_spec -> mode
Rule 228   parameter_attribute -> LOC
Rule 229   result_spec -> RETURNS LPAREN mode result_attribute RPAREN
Rule 230   result_spec -> RETURNS LPAREN mode RPAREN
Rule 231   result_attribute -> LOC
Rule 232   empty -> <empty>

Terminals, with rules where they appear

AND                  : 113
ARRAY                : 51
ARROW                : 68 142
ASSIGN               : 19 22 23 27 155 180 181 182 183
BOOL                 : 37
BY                   : 186
CCONST               : 90
CHAR                 : 38
CHARS                : 49
CIRCUMF              : 
COLON                : 12 13 43 71 76 94
COMMA                : 15 20 25 52 58 97 196 223
CONCAT               : 128
CONCATASSIGN         : 161
DBLQUO               : 
DBLSLASH             : 
DCL                  : 9
DIF                  : 116
DIVIDE               : 132
DIVIDEASSIGN         : 159
DO                   : 170 171 172 173
DOWN                 : 180 182 189
ELSE                 : 106 166 167
ELSIF                : 107 108 168 169
END                  : 215 216 217 218 219 220 221 222
EQUALS               : 115
EXIT                 : 200
FALSE                : 88
FI                   : 101 102 162 163
FOR                  : 177
GEQ                  : 118
GTR                  : 117
ICONST               : 87
ID                   : 59
IF                   : 101 102 162 163
IN                   : 121 189 190
INT                  : 36
LBRACK               : 49 51 69 71 75 76 93 94
LCURL                : 
LENGTH               : 212
LEQ                  : 120
LOC                  : 228 231
LOWER                : 211
LPAREN               : 39 40 96 194 195 205 206 215 216 217 218 219 220 221 222 229 230
LSS                  : 119
MINUS                : 127 137
MINUSASSIGN          : 157
NOT                  : 138
NULL                 : 91
NUM                  : 207
OD                   : 170 171 172 173
OR                   : 114
PERC                 : 133
PERCASSIGN           : 160
PLUS                 : 126
PLUSASSIGN           : 156
PRED                 : 208
PRINT                : 214
PROC                 : 215 216 217 218 219 220 221 222
RBRACK               : 49 51 69 71 75 76 93 94
RCURL                : 
READ                 : 213
REF                  : 46
RESULT               : 203
RETURN               : 201 202
RETURNS              : 229 230
RPAREN               : 39 40 96 194 195 205 206 215 216 217 218 219 220 221 222 229 230
SCONST               : 92
SEMICOL              : 9 10 11 12 13 14 170 171 215 216 217 218 219 220 221 222
SINGQUO              : 
SUCC                 : 209
SYN                  : 10
THEN                 : 105 164 165
TIMES                : 131
TIMESASSIGN          : 158
TO                   : 187
TRUE                 : 89
TYPE                 : 11
UPPER                : 210
WHILE                : 191
error                : 

Nonterminals, with rules where they appear

action               : 13 14
action_statement     : 8 143 144
action_statement_list : 143 164 166 170 172
arithmetic_additive_operator : 124
arithmetic_multiplicative_operator : 130
array_element        : 64
array_location       : 75 76
array_mode           : 48
array_primitive_value : 93 94
array_slice          : 65
assigning_operator   : 154
assignment_action    : 147
boolean_expression   : 101 102 107 108 162 163 168 169 191
boolean_literal      : 83
boolean_mode         : 33
bracketed_action     : 146
builtin_call         : 193
builtin_name         : 205 206
call_action          : 66 148
character_literal    : 84
character_mode       : 34
character_string_literal : 86
composite_mode       : 31
conditional_expression : 100
constant_expression  : 22 23
control_part         : 170 171
declaration          : 15 16
declaration_list     : 9 15
declaration_statement : 4
dereferenced_reference : 61
discrete_expression  : 185 187
discrete_mode        : 29 40 54
discrete_mode_name   : 39 189 190
discrete_range_mode  : 35
do_action            : 153
element_mode         : 51
else_clause          : 162 168
else_expression      : 101 102
elsif_expression     : 102 107
empty                : 165 167
empty_literal        : 85
end_value            : 180 181 182 183
exit_action          : 149
expression           : 19 24 44 45 96 97 98 103 104 105 106 154 188 198 204
expression_list      : 75 93 97
for_control          : 174 176
formal_parameter     : 223 224
formal_parameter_list : 215 216 217 219 223
identifier           : 41 42 57 58 67 145 184 199
identifier_list      : 17 18 22 23 27 58 225
if_action            : 152
index_mode           : 52 53
index_mode_list      : 51 52
initialization       : 17
integer_expression   : 70 73 74 186
integer_literal      : 50 82 136
integer_mode         : 32
iteration            : 177
label_id             : 12 13 200
left_element         : 71
literal              : 78
literal_range        : 39 40 55
location             : 68 72 77 139 142 154
location_name        : 60
loop_counter         : 180 181 182 183 189 190
lower_bound          : 43 76 94
membership_operator  : 112
mode                 : 17 18 22 27 46 56 226 227 229 230
mode_definition      : 25 26
mode_name            : 28
monadic_operator     : 134
newmode_list         : 11 25
newmode_statement    : 6
operand0             : 99 110
operand1             : 109 110 123
operand2             : 122 123 130
operand3             : 129 130
operand4             : 134 135
operator1            : 110
operator2            : 123
parameter            : 196 197
parameter_attribute  : 226
parameter_list       : 194 196 205
parameter_spec       : 225
parenthesized_expression : 81
primitive_value      : 95 141
procedure_call       : 192
procedure_definition : 12
procedure_name       : 194 195
procedure_statement  : 7
program              : 0
range_enumeration    : 178
reference_mode       : 30
referenced_location  : 140
relational_operator  : 111
result               : 201 203
result_action        : 151
result_attribute     : 229
result_spec          : 215 216 218 220
return_action        : 150
right_element        : 71
start_element        : 69
start_value          : 180 181 182 183
statement            : 2 3
statement_list       : 1 2 215 217 218 221
step_enumeration     : 179
step_value           : 180 181
string_concatenation_operator : 125
string_element       : 62
string_length        : 49
string_location      : 69 71
string_mode          : 47
string_slice         : 63
synonym_definition   : 20 21
synonym_list         : 10 20
synonym_statement    : 5
then_clause          : 162 163 168 169
then_expression      : 101 102 107 108
upper_bound          : 43 76 94
value_array_element  : 79
value_array_slice    : 80
while_control        : 174 175

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . declaration_statement
    (5) statement -> . synonym_statement
    (6) statement -> . newmode_statement
    (7) statement -> . procedure_statement
    (8) statement -> . action_statement
    (9) declaration_statement -> . DCL declaration_list SEMICOL
    (10) synonym_statement -> . SYN synonym_list SEMICOL
    (11) newmode_statement -> . TYPE newmode_list SEMICOL
    (12) procedure_statement -> . label_id COLON procedure_definition SEMICOL
    (13) action_statement -> . label_id COLON action SEMICOL
    (14) action_statement -> . action SEMICOL
    (145) label_id -> . identifier
    (146) action -> . bracketed_action
    (147) action -> . assignment_action
    (148) action -> . call_action
    (149) action -> . exit_action
    (150) action -> . return_action
    (151) action -> . result_action
    (59) identifier -> . ID
    (152) bracketed_action -> . if_action
    (153) bracketed_action -> . do_action
    (154) assignment_action -> . location assigning_operator expression
    (192) call_action -> . procedure_call
    (193) call_action -> . builtin_call
    (200) exit_action -> . EXIT label_id
    (201) return_action -> . RETURN result
    (202) return_action -> . RETURN
    (203) result_action -> . RESULT result
    (162) if_action -> . IF boolean_expression then_clause else_clause FI
    (163) if_action -> . IF boolean_expression then_clause FI
    (170) do_action -> . DO control_part SEMICOL action_statement_list OD
    (171) do_action -> . DO control_part SEMICOL OD
    (172) do_action -> . DO action_statement_list OD
    (173) do_action -> . DO OD
    (60) location -> . location_name
    (61) location -> . dereferenced_reference
    (62) location -> . string_element
    (63) location -> . string_slice
    (64) location -> . array_element
    (65) location -> . array_slice
    (66) location -> . call_action
    (194) procedure_call -> . procedure_name LPAREN parameter_list RPAREN
    (195) procedure_call -> . procedure_name LPAREN RPAREN
    (205) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (206) builtin_call -> . builtin_name LPAREN RPAREN
    (67) location_name -> . identifier
    (68) dereferenced_reference -> . location ARROW
    (69) string_element -> . string_location LBRACK start_element RBRACK
    (71) string_slice -> . string_location LBRACK left_element COLON right_element RBRACK
    (75) array_element -> . array_location LBRACK expression_list RBRACK
    (76) array_slice -> . array_location LBRACK lower_bound COLON upper_bound RBRACK
    (199) procedure_name -> . identifier
    (207) builtin_name -> . NUM
    (208) builtin_name -> . PRED
    (209) builtin_name -> . SUCC
    (210) builtin_name -> . UPPER
    (211) builtin_name -> . LOWER
    (212) builtin_name -> . LENGTH
    (213) builtin_name -> . READ
    (214) builtin_name -> . PRINT
    (72) string_location -> . location
    (77) array_location -> . location

    DCL             shift and go to state 7
    SYN             shift and go to state 31
    TYPE            shift and go to state 35
    ID              shift and go to state 47
    EXIT            shift and go to state 44
    RETURN          shift and go to state 36
    RESULT          shift and go to state 38
    IF              shift and go to state 45
    DO              shift and go to state 39
    NUM             shift and go to state 2
    PRED            shift and go to state 15
    SUCC            shift and go to state 28
    UPPER           shift and go to state 43
    LOWER           shift and go to state 1
    LENGTH          shift and go to state 3
    READ            shift and go to state 34
    PRINT           shift and go to state 12

    string_location                shift and go to state 4
    location                       shift and go to state 5
    procedure_name                 shift and go to state 6
    dereferenced_reference         shift and go to state 27
    string_element                 shift and go to state 8
    if_action                      shift and go to state 9
    string_slice                   shift and go to state 10
    location_name                  shift and go to state 11
    call_action                    shift and go to state 13
    builtin_name                   shift and go to state 14
    statement_list                 shift and go to state 16
    do_action                      shift and go to state 17
    identifier                     shift and go to state 18
    procedure_call                 shift and go to state 19
    label_id                       shift and go to state 20
    synonym_statement              shift and go to state 21
    builtin_call                   shift and go to state 22
    array_location                 shift and go to state 23
    result_action                  shift and go to state 24
    return_action                  shift and go to state 25
    newmode_statement              shift and go to state 26
    exit_action                    shift and go to state 29
    statement                      shift and go to state 30
    procedure_statement            shift and go to state 32
    array_slice                    shift and go to state 33
    action                         shift and go to state 37
    declaration_statement          shift and go to state 40
    bracketed_action               shift and go to state 41
    program                        shift and go to state 42
    assignment_action              shift and go to state 46
    action_statement               shift and go to state 48
    array_element                  shift and go to state 49

state 1

    (211) builtin_name -> LOWER .

    LPAREN          reduce using rule 211 (builtin_name -> LOWER .)


state 2

    (207) builtin_name -> NUM .

    LPAREN          reduce using rule 207 (builtin_name -> NUM .)


state 3

    (212) builtin_name -> LENGTH .

    LPAREN          reduce using rule 212 (builtin_name -> LENGTH .)


state 4

    (69) string_element -> string_location . LBRACK start_element RBRACK
    (71) string_slice -> string_location . LBRACK left_element COLON right_element RBRACK

    LBRACK          shift and go to state 50


state 5

    (154) assignment_action -> location . assigning_operator expression
    (68) dereferenced_reference -> location . ARROW
    (72) string_location -> location .
    (77) array_location -> location .
    (155) assigning_operator -> . ASSIGN
    (156) assigning_operator -> . PLUSASSIGN
    (157) assigning_operator -> . MINUSASSIGN
    (158) assigning_operator -> . TIMESASSIGN
    (159) assigning_operator -> . DIVIDEASSIGN
    (160) assigning_operator -> . PERCASSIGN
    (161) assigning_operator -> . CONCATASSIGN

  ! reduce/reduce conflict for LBRACK resolved using rule 72 (string_location -> location .)
    ARROW           shift and go to state 53
    LBRACK          reduce using rule 72 (string_location -> location .)
    ASSIGN          shift and go to state 58
    PLUSASSIGN      shift and go to state 52
    MINUSASSIGN     shift and go to state 57
    TIMESASSIGN     shift and go to state 56
    DIVIDEASSIGN    shift and go to state 59
    PERCASSIGN      shift and go to state 55
    CONCATASSIGN    shift and go to state 54

  ! LBRACK          [ reduce using rule 77 (array_location -> location .) ]

    assigning_operator             shift and go to state 51

state 6

    (194) procedure_call -> procedure_name . LPAREN parameter_list RPAREN
    (195) procedure_call -> procedure_name . LPAREN RPAREN

    LPAREN          shift and go to state 60


state 7

    (9) declaration_statement -> DCL . declaration_list SEMICOL
    (15) declaration_list -> . declaration_list COMMA declaration
    (16) declaration_list -> . declaration
    (17) declaration -> . identifier_list mode initialization
    (18) declaration -> . identifier_list mode
    (57) identifier_list -> . identifier
    (58) identifier_list -> . identifier_list COMMA identifier
    (59) identifier -> . ID

    ID              shift and go to state 47

    identifier                     shift and go to state 61
    identifier_list                shift and go to state 62
    declaration_list               shift and go to state 63
    declaration                    shift and go to state 64

state 8

    (62) location -> string_element .

    ARROW           reduce using rule 62 (location -> string_element .)
    TIMES           reduce using rule 62 (location -> string_element .)
    DIVIDE          reduce using rule 62 (location -> string_element .)
    PERC            reduce using rule 62 (location -> string_element .)
    PLUS            reduce using rule 62 (location -> string_element .)
    MINUS           reduce using rule 62 (location -> string_element .)
    CONCAT          reduce using rule 62 (location -> string_element .)
    AND             reduce using rule 62 (location -> string_element .)
    OR              reduce using rule 62 (location -> string_element .)
    EQUALS          reduce using rule 62 (location -> string_element .)
    DIF             reduce using rule 62 (location -> string_element .)
    GTR             reduce using rule 62 (location -> string_element .)
    GEQ             reduce using rule 62 (location -> string_element .)
    LSS             reduce using rule 62 (location -> string_element .)
    LEQ             reduce using rule 62 (location -> string_element .)
    IN              reduce using rule 62 (location -> string_element .)
    ELSE            reduce using rule 62 (location -> string_element .)
    ELSIF           reduce using rule 62 (location -> string_element .)
    LBRACK          reduce using rule 62 (location -> string_element .)
    SEMICOL         reduce using rule 62 (location -> string_element .)
    RPAREN          reduce using rule 62 (location -> string_element .)
    RBRACK          reduce using rule 62 (location -> string_element .)
    COMMA           reduce using rule 62 (location -> string_element .)
    ASSIGN          reduce using rule 62 (location -> string_element .)
    PLUSASSIGN      reduce using rule 62 (location -> string_element .)
    MINUSASSIGN     reduce using rule 62 (location -> string_element .)
    TIMESASSIGN     reduce using rule 62 (location -> string_element .)
    DIVIDEASSIGN    reduce using rule 62 (location -> string_element .)
    PERCASSIGN      reduce using rule 62 (location -> string_element .)
    CONCATASSIGN    reduce using rule 62 (location -> string_element .)
    COLON           reduce using rule 62 (location -> string_element .)
    THEN            reduce using rule 62 (location -> string_element .)
    DOWN            reduce using rule 62 (location -> string_element .)
    BY              reduce using rule 62 (location -> string_element .)
    TO              reduce using rule 62 (location -> string_element .)
    FI              reduce using rule 62 (location -> string_element .)
    WHILE           reduce using rule 62 (location -> string_element .)


state 9

    (152) bracketed_action -> if_action .

    SEMICOL         reduce using rule 152 (bracketed_action -> if_action .)


state 10

    (63) location -> string_slice .

    ARROW           reduce using rule 63 (location -> string_slice .)
    TIMES           reduce using rule 63 (location -> string_slice .)
    DIVIDE          reduce using rule 63 (location -> string_slice .)
    PERC            reduce using rule 63 (location -> string_slice .)
    PLUS            reduce using rule 63 (location -> string_slice .)
    MINUS           reduce using rule 63 (location -> string_slice .)
    CONCAT          reduce using rule 63 (location -> string_slice .)
    AND             reduce using rule 63 (location -> string_slice .)
    OR              reduce using rule 63 (location -> string_slice .)
    EQUALS          reduce using rule 63 (location -> string_slice .)
    DIF             reduce using rule 63 (location -> string_slice .)
    GTR             reduce using rule 63 (location -> string_slice .)
    GEQ             reduce using rule 63 (location -> string_slice .)
    LSS             reduce using rule 63 (location -> string_slice .)
    LEQ             reduce using rule 63 (location -> string_slice .)
    IN              reduce using rule 63 (location -> string_slice .)
    ELSE            reduce using rule 63 (location -> string_slice .)
    ELSIF           reduce using rule 63 (location -> string_slice .)
    LBRACK          reduce using rule 63 (location -> string_slice .)
    SEMICOL         reduce using rule 63 (location -> string_slice .)
    RPAREN          reduce using rule 63 (location -> string_slice .)
    RBRACK          reduce using rule 63 (location -> string_slice .)
    COMMA           reduce using rule 63 (location -> string_slice .)
    ASSIGN          reduce using rule 63 (location -> string_slice .)
    PLUSASSIGN      reduce using rule 63 (location -> string_slice .)
    MINUSASSIGN     reduce using rule 63 (location -> string_slice .)
    TIMESASSIGN     reduce using rule 63 (location -> string_slice .)
    DIVIDEASSIGN    reduce using rule 63 (location -> string_slice .)
    PERCASSIGN      reduce using rule 63 (location -> string_slice .)
    CONCATASSIGN    reduce using rule 63 (location -> string_slice .)
    COLON           reduce using rule 63 (location -> string_slice .)
    THEN            reduce using rule 63 (location -> string_slice .)
    DOWN            reduce using rule 63 (location -> string_slice .)
    BY              reduce using rule 63 (location -> string_slice .)
    TO              reduce using rule 63 (location -> string_slice .)
    FI              reduce using rule 63 (location -> string_slice .)
    WHILE           reduce using rule 63 (location -> string_slice .)


state 11

    (60) location -> location_name .

    ARROW           reduce using rule 60 (location -> location_name .)
    TIMES           reduce using rule 60 (location -> location_name .)
    DIVIDE          reduce using rule 60 (location -> location_name .)
    PERC            reduce using rule 60 (location -> location_name .)
    PLUS            reduce using rule 60 (location -> location_name .)
    MINUS           reduce using rule 60 (location -> location_name .)
    CONCAT          reduce using rule 60 (location -> location_name .)
    AND             reduce using rule 60 (location -> location_name .)
    OR              reduce using rule 60 (location -> location_name .)
    EQUALS          reduce using rule 60 (location -> location_name .)
    DIF             reduce using rule 60 (location -> location_name .)
    GTR             reduce using rule 60 (location -> location_name .)
    GEQ             reduce using rule 60 (location -> location_name .)
    LSS             reduce using rule 60 (location -> location_name .)
    LEQ             reduce using rule 60 (location -> location_name .)
    IN              reduce using rule 60 (location -> location_name .)
    ELSE            reduce using rule 60 (location -> location_name .)
    ELSIF           reduce using rule 60 (location -> location_name .)
    LBRACK          reduce using rule 60 (location -> location_name .)
    SEMICOL         reduce using rule 60 (location -> location_name .)
    RPAREN          reduce using rule 60 (location -> location_name .)
    RBRACK          reduce using rule 60 (location -> location_name .)
    COMMA           reduce using rule 60 (location -> location_name .)
    ASSIGN          reduce using rule 60 (location -> location_name .)
    PLUSASSIGN      reduce using rule 60 (location -> location_name .)
    MINUSASSIGN     reduce using rule 60 (location -> location_name .)
    TIMESASSIGN     reduce using rule 60 (location -> location_name .)
    DIVIDEASSIGN    reduce using rule 60 (location -> location_name .)
    PERCASSIGN      reduce using rule 60 (location -> location_name .)
    CONCATASSIGN    reduce using rule 60 (location -> location_name .)
    COLON           reduce using rule 60 (location -> location_name .)
    THEN            reduce using rule 60 (location -> location_name .)
    DOWN            reduce using rule 60 (location -> location_name .)
    BY              reduce using rule 60 (location -> location_name .)
    TO              reduce using rule 60 (location -> location_name .)
    FI              reduce using rule 60 (location -> location_name .)
    WHILE           reduce using rule 60 (location -> location_name .)


state 12

    (214) builtin_name -> PRINT .

    LPAREN          reduce using rule 214 (builtin_name -> PRINT .)


state 13

    (148) action -> call_action .
    (66) location -> call_action .

    SEMICOL         reduce using rule 148 (action -> call_action .)
    ARROW           reduce using rule 66 (location -> call_action .)
    ASSIGN          reduce using rule 66 (location -> call_action .)
    PLUSASSIGN      reduce using rule 66 (location -> call_action .)
    MINUSASSIGN     reduce using rule 66 (location -> call_action .)
    TIMESASSIGN     reduce using rule 66 (location -> call_action .)
    DIVIDEASSIGN    reduce using rule 66 (location -> call_action .)
    PERCASSIGN      reduce using rule 66 (location -> call_action .)
    CONCATASSIGN    reduce using rule 66 (location -> call_action .)
    LBRACK          reduce using rule 66 (location -> call_action .)


state 14

    (205) builtin_call -> builtin_name . LPAREN parameter_list RPAREN
    (206) builtin_call -> builtin_name . LPAREN RPAREN

    LPAREN          shift and go to state 65


state 15

    (208) builtin_name -> PRED .

    LPAREN          reduce using rule 208 (builtin_name -> PRED .)


state 16
